// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selectbox component renders correctly 1`] = `
<label
  className="asdfasdf active select-fields-wrapper"
  htmlFor=""
>
  <select
    aria-label=""
    className="selectField"
    id="abcd"
    isSuccessState={false}
    name=""
    value="hi"
  >
    <option
      id=""
      key=""
      selected=""
      value=""
    />
    <option
      id="CA"
      key="CA"
      selected=""
      value="Canada"
    >
      Canada
    </option>
  </select>
  <Styled(BodyStyle)
    BodycolorLg="primary"
    FormVariation="float"
    bodySize="two"
    tag="div"
  >
    placeholder
  </Styled(BodyStyle)>
</label>
`;

exports[`Selectbox component renders correctly with touched and error 1`] = `
<label
  className="asdfasdf  select-fields-wrapper"
  htmlFor=""
>
  <select
    aria-label=""
    className="selectField"
    defaultValue="United States"
    id="abcd"
    isSuccessState={false}
    name=""
  >
    <option
      id=""
      key=""
      selected=""
      value=""
    />
  </select>
  <Styled(BodyStyle)
    BodycolorLg="primary"
    FormVariation="float"
    bodySize="two"
    tag="div"
  />
  <Styled(BodyStyle)
    ErrorMsg="error"
    bodySize="two"
    clearFloat={true}
    tag="div"
  >
    this is an error
  </Styled(BodyStyle)>
</label>
`;

exports[`Selectbox component renders correctly with touched and warning 1`] = `
<label
  className="asdfasdf  select-fields-wrapper"
  htmlFor=""
>
  <select
    aria-label=""
    className="selectField"
    defaultValue="United States"
    id="abcd"
    isSuccessState={false}
    name=""
  >
    <option
      id=""
      key=""
      selected=""
      value=""
    />
    <option
      id="CA"
      key="CA"
      selected=""
      value="Canada"
    >
      Canada
    </option>
  </select>
  <Styled(BodyStyle)
    BodycolorLg="primary"
    FormVariation="float"
    bodySize="two"
    tag="div"
  />
  <Styled(BodyStyle)
    bodySize="two"
    tag="div"
  >
    this is a warning
  </Styled(BodyStyle)>
</label>
`;
